Fix Home nav link to scroll to very top
- Home now uses scrollTo top instead of anchor (which was offset by margin)
- Added scroll-padding-top: 80px to prevent fixed navbar from covering section headings

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
     scroll-behavior: smooth;
+    scroll-padding-top: 80px;
 }
 
 @import url('https://fonts.cdnfonts.com/css/montserrat');
